--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-  <title>vueapp</title>
-  <link rel="stylesheet" href="/static/css/reset.css">
-  <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css"></link>
-</head>
-<script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
-<script>
-  if ('addEventListener' in document) {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><title>vueapp</title><link rel=stylesheet href=/static/css/reset.css><link rel=stylesheet href=http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css><link href=./static/css/app.66ec58bfc655968e26449668f2c39461.css rel=stylesheet></head><script src=https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js></script><script>if ('addEventListener' in document) {
     document.addEventListener('DOMContentLoaded', function () {
       FastClick.attach(document.body);
     }, false);
   }
   if (!window.Promise) {
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"' + '>' + '<' + '/' + 'script>');
-  }
-
-</script>
-
-<body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-
-</html>
+  }</script><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.69a082d266a82a948a1d.js></script><script type=text/javascript src=./static/js/app.1709cf2f2fbbb360156c.js></script></body></html>
